Обновил api Добавил gameId
